--- a/flutter_ui_challenges/pubspec.yaml
+++ b/flutter_ui_challenges/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: "^8.5.0"
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +41,25 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/ttg.jpg
+    - assets/images/joystick.png
+    - assets/images/microphone.png
+    - assets/images/wallet.png
+
+  fonts:
+    - family: Themify
+      fonts:
+        - asset: assets/fonts/themify.ttf
+    - family: LineAwesome
+      fonts:
+        - asset: assets/fonts/line-awesome.ttf
+    - family: Timeburner
+      fonts:
+        - asset: assets/fonts/timeburnernormal.ttf
+        - asset: assets/fonts/timeburnerbold.ttf
+          weight: 700
 
   # To add assets to your application, add an assets section, like this:
   # assets:
